Senior_Project/src/senior/project/test/server/errors/ServerConnectionException.java
package senior.project.test.server.errors;

/**
 * This exception addresses errors with the connection to the server, versus
 * errors generated by the server
 * @author Paul Jones
 */
public class ServerConnectionException extends Exception {

  public ServerConnectionException(String msg) {
    super(msg);
  }
}
